fix z-index bug

--- a/src/app/components/sidebarcpnts/stockPr/page3.component.css
+++ b/src/app/components/sidebarcpnts/stockPr/page3.component.css
@@ -21,6 +21,7 @@ div.containerPadding
     margin: auto;
     padding-top: 70px;
     padding-bottom: 50px;
+    min-width: 900px !important;
     width: 95%;
     height: 100%;
     transition: 0.9s;
@@ -161,6 +162,7 @@ input::-webkit-outer-spin-button {
     min-width: unset !important;
     padding: 0px !important;
     background-color: transparent !important;
+    z-index: 10;
 }
 .removeBtn
 {
@@ -204,4 +206,11 @@ input::-webkit-outer-spin-button {
 .lodingSpiner
 {
   padding: 0px !important;
+}
+@media (max-width: 1200px ) and (min-width: 1000px ){
+  .stockNonDispotIcon
+  {
+    left: 30px;
+  }
+
 }
